Fix/module name overlap (#1556)
* fix: pro-button-icon-alignment

* fix: align PRO icon with text in upgrade button changes in less file

* fix : phpcs workflow deprecation

* fix : module name overlap

--- a/assets/less/admin.less
+++ b/assets/less/admin.less
@@ -1231,6 +1231,10 @@ span.pro-icon:hover .wpuf-pro-field-tooltip {
     }
 }
 
+.plugin-card .desc>p, .plugin-card .name {
+    margin-left: 148px !important;
+}
+
 @import "help.less";
 @import "whats-new.less";
 @import "metabox-tabs.less";
